# CS2013-Project

./: CMakeLists.txt  README.md  main.cpp  prog
include/: A.h  AI.h  Board.h  Game.h  definitions.h
src/: A.cpp  AI.cpp  Board.cpp  Game.cpp  definitions.h  libraries.h  main.cpp
